default/objects/success__User_Challenge__c/success__User_Challenge__c.object-meta.xml
<CustomObject>
    <description>DEPRECATED</description>
    <label>DEPRECATED - User Challenge</label>
    <nameField>
        <displayFormat>UC-{0000}</displayFormat>
        <label>User Challenge ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DEPRECATED - User Challenges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>