default/objects/success__User_Challenge__c/fields/success__Challenge__c.field-meta.xml
<CustomField>
    <fullName>success__Challenge__c</fullName>
    <label>Challenge</label>
    <referenceTo>success__Challenge__c</referenceTo>
    <relationshipName>User_Challenges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>