default/objects/success__User_Challenge__c/fields/success__Challenge_Name__c.field-meta.xml
<CustomField>
    <fullName>success__Challenge_Name__c</fullName>
    <formula>success__Challenge__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Challenge Name</label>
    <type>Text</type>
</CustomField>