default/objects/success__User_Challenge__c/fields/success__Count__c.field-meta.xml
<CustomField>
    <fullName>success__Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>