default/objects/success__User_Challenge__c/fields/success__Last_Updated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Last_Updated_Date_Time__c</fullName>
    <inlineHelpText>The date and time the user challenge count was last updated</inlineHelpText>
    <label>Last Updated (date/time)</label>
    <type>DateTime</type>
</CustomField>