default/objects/success__User_Challenge__c/fields/success__Started_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Started_Date_Time__c</fullName>
    <inlineHelpText>The date and time that the User Challenge was started</inlineHelpText>
    <label>Started (date/time)</label>
    <type>DateTime</type>
</CustomField>